--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
+torchvision
+torch
+tqdm
+numpy
 # This file may be used to create an environment using:
 # $ conda create --name <env> --file <this file>
 # platform: linux-64
